--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,10 +14,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Create virtual environment and Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
+        chmod +x setup.sh
+        ./setup.sh
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
