--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,6 @@ jobs:
           BLUESKY_HANDLE: ${{ secrets.BLUESKY_HANDLE }}
           BLUESKY_APP_PASSWORD: ${{ secrets.BLUESKY_APP_PASSWORD }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: python main.py
+        run: |
+          source .virtualenv/bin/activate
+          python main.py
