--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,14 @@ jobs:
         run: |
           echo "BLUESKY_HANDLE=${{ secrets.BLUESKY_HANDLE }}" > .env
           echo "BLUESKY_APP_PASSWORD=${{ secrets.BLUESKY_APP_PASSWORD }}" >> .env
-          echo "OPENAI_API_KEY=${{ secret.OPENAI_API_KEY }}" >> .env
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
           
       - name: Run the script
         env:
           BLUESKY_HANDLE: ${{ secrets.BLUESKY_HANDLE }}
           BLUESKY_APP_PASSWORD: ${{ secrets.BLUESKY_APP_PASSWORD }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          
         run: |
           source .virtualenv/bin/activate
           python main.py
